# aleph-framework

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  resume-status.md  saida.txt  script-sn.sh  test-results
.claude/agents/: aleph-config-validator.md  aleph-flows-implementer.md  aleph-knowledge-debugger.md
.claude/skills/aleph-knowledge/: SKILL.md
.claude/skills/aleph-pipeline/: SKILL.md
.claude/skills/aleph-schema/: SKILL.md
.claude/skills/aleph-test/: SKILL.md
.claude/skills/aleph-yaml/: SKILL.MD
clients/example/: config.yaml
clients/example/prompts/: system.md
clients/example/tools/: __init__.py  echo_tools.py
clients/smoke-test/: config.yaml
clients/smoke-test/data/: products.json
clients/smoke-test/prompts/: system.md
clients/smoke-test/tools/: smoke_tools.py
clients/teste-hitl/: config.yaml
clients/teste-hitl/prompts/: system.md
clients/webhook-test/: config.yaml
clients/webhook-test/prompts/: system.md
core/: __init__.py
core/api/: __init__.py  webhooks.py
core/awareness/: __init__.py  injector.py  reader.py
core/channels/: __init__.py  base.py
core/channels/zapi/: __init__.py  adapter.py  sender.py
core/cli/: __init__.py  main.py
core/cli/templates/: Dockerfile  config.yaml  dockerignore  env.example
core/cli/templates/prompts/: system.md
core/engine/: __init__.py  pipeline.py  runner.py
core/flows/: __init__.py  engine.py  expr.py  state.py  template.py
core/guardrails/: __init__.py  input.py  output.py
core/habits/: __init__.py  database.py  embeddings.py  search.py  store.py
core/human/: __init__.py  escalation.py
core/knowledge/: __init__.py  database.py  embeddings.py  ingest.py  loader.py  search.py
core/llm/: __init__.py  bifrost.py  embeddings.py  llm_router.py
core/mcp/: __init__.py  server.py
core/media/: __init__.py  audio.py  pdf.py  processor.py  vision.py
core/messaging/: __init__.py  zapi_filter.py  zapi_send.py
core/queue/: __init__.py  dispatcher.py  jobs.py  worker.py
core/registry/: __init__.py  loader.py  registry.py  schema.py  tool_loader.py
core/session/: __init__.py  memory.py  redis.py  redis_escalation.py
core/tools/: __init__.py  webhook.py
docs/: DESENVOLVIMENTO-fase2-hitl.md  Desenvolvimento fase3 habits.md
docs/superpowers/plans/: 2026-04-02-episodic-memory-llm-router-self-awareness.md  2026-04-07-flow-engine-v2-enterprise.md  2026-04-07-phase-11-media-processing.md  2026-06-23-phase-1-llm-agnostic-channel-abstraction.md
skills-for-alef/aleph-flows/: SKILL.md
skills-for-alef/aleph-guardrails/: SKILL.md
skills-for-alef/aleph-habits/: SKILL.md
skills-for-alef/aleph-human/: SKILL.md
skills-for-alef/aleph-messaging/: SKILL.md
skills-for-alef/aleph-session/: SKILL.md
skills-for-alef/aleph-system-prompt/: SKILL.md
tests/framework/: test_awareness.py  test_channels.py  test_embeddings.py  test_episodic_memory.py  test_flow_engine_v2.py  test_flows.py  test_mcp.py  test_media.py  test_queue.py  test_schema.py  test_subagents.py
