[project]
name = "zuper-agent-framework"
version = "0.1.0"
description = "Config-driven framework for WhatsApp AI agents"
requires-python = ">=3.11"
dependencies = [
    # Core
    "openai-agents>=0.12.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0",
    # Redis
    "redis>=5.0.0",
    # Supabase
    "supabase>=2.0.0",
    # HTTP
    "httpx>=0.28.0",
    # Queue
    "arq>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
]
media = [
    "openai>=1.60.0",  # Whisper
    "pypdf>=5.0.0",
]

[project.scripts]
zuper-agent = "cli.main:app"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
