[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aleph-agent"
version = "0.1.0"
description = "Config-driven framework for WhatsApp AI agents — YAML + tools, zero code on the core"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Álef Souza", email = "alef@aleph.dev"},
]
keywords = ["whatsapp", "ai", "agent", "chatbot", "openai", "framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core
    "openai-agents>=0.12.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    # CLI
    "typer>=0.15.0",
    "rich>=13.0.0",
    # Redis
    "redis[hiredis]>=5.0.0",
    # HTTP
    "httpx>=0.28.0",
    # MCP
    "mcp>=1.0.0",
]

[project.optional-dependencies]
habits = [
    "asyncpg>=0.30.0",
]
knowledge = [
    "asyncpg>=0.30.0",
    "pypdf>=5.0.0",
]
media = [
    "openai>=1.60.0",
    "pypdf>=5.0.0",
]
queue = [
    "arq>=0.26.0",
]
all = [
    "aleph[habits,media,queue,knowledge]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
]

[project.scripts]
aleph-agent = "core.cli.main:app"
aleph-mcp = "core.mcp.server:main"

[project.urls]
Homepage = "https://github.com/aleph-framework/aleph"
Documentation = "https://docs.aleph.dev/agent"
Repository = "https://github.com/aleph-framework/aleph"

[tool.setuptools.packages.find]
include = ["core*", "cli*"]
exclude = ["tests*", "clients*", "docker*", "scripts*"]

[tool.setuptools.package-data]
cli = ["templates/**/*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]